third_party/WebKit/Source/WebCore/html/HTMLScriptElement.cpp
@@ -30,6 +30,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "EventNames.h"
 #include "HTMLNames.h"
 #include "ScriptEventListener.h"
+#include "Settings.h"
 #include "Text.h"
 
 namespace WebCore {
@@ -82,8 +83,33 @@ void HTMLScriptElement::parseMappedAttribute(Attribute* attr)
         HTMLElement::parseMappedAttribute(attr);
 }
 
+static bool needsOldRequirejsQuirk(HTMLScriptElement* element)
+{
+    if (element->fastGetAttribute(typeAttr) != "script/cache")
+        return false;
+
+    Document* document = element->document();
+
+    const KURL& url = document->url();
+    if (!equalIgnoringCase(url.host(), "www.zipcar.com"))
+        return false;
+
+    Settings* settings = document->settings();
+    if (!settings)
+        return false;
+    if (!settings->needsSiteSpecificQuirks())
+        return false;
+
+    return true;
+}
+
 void HTMLScriptElement::insertedIntoDocument()
 {
+    if (needsOldRequirejsQuirk(this)) {
+        if (!asyncAttributeValue())
+            handleAsyncAttribute(); // Clear forceAsync, so this script loads in parallel, but executes in order.
+        setAttribute(typeAttr, "text/javascript");
+    }
     HTMLElement::insertedIntoDocument();
     ScriptElement::insertedIntoDocument();
 }
